:car: merge sort & quick sort

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="./%233.js"></script> -->
-    <script src="./%238.js"></script>
+    <!-- <script src="./%238.js"></script> -->
+    <script src="./%239.js"></script>
 </body>
 </html>
