:football: update bf & rk string match

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./%238.js"></script> -->
     <!-- <script src="./%239.js"></script> -->
     <!-- <script src="./%2311.js"></script> -->
-    <script src="./%2313.js"></script>
+    <!-- <script src="./%2313.js"></script> -->
+    <script src="./%2315.js"></script>
 </body>
 </html>
